--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>ROMs</h1>
     <div id="lineage">
         <h2>Lineage OS</h2>
-        <a href="rom-details.html" onclick="loadRomDetails('lineage.json', 'lineage-changelogs.md'); return false;">View Details</a>
+        <a href="rom-details.html#lineage">View Details</a>
         <div class="screenshot-options">
             <a href="#">Share Screenshot 1</a>
             <a href="#">Share Screenshot 2</a>
@@ -18,7 +18,7 @@
     </div>
     <div id="derpfest">
         <h2>DerpFest</h2>
-        <a href="rom-details.html" onclick="loadRomDetails('derpfest.json', 'derpfest-changelogs.md'); return false;">View Details</a>
+        <a href="rom-details.html#derpfest">View Details</a>
         <div class="screenshot-options">
             <a href="#">Share Screenshot 1</a>
             <a href="#">Share Screenshot 2</a>
@@ -26,7 +26,7 @@
     </div>
     <div id="pixelos">
         <h2>PixelOS</h2>
-        <a href="rom-details.html" onclick="loadRomDetails('pixelos.json', 'pixelos-changelogs.md'); return false;">View Details</a>
+        <a href="rom-details.html#pixelos">View Details</a>
         <div class="screenshot-options">
             <a href="#">Share Screenshot 1</a>
             <a href="#">Share Screenshot 2</a>
